Trying different machine learning models in the notebook

--- a/notebooks/testing.ipynb
+++ b/notebooks/testing.ipynb
@@ -1,8 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "fdf68b33",
+   "metadata": {},
+   "source": [
+    "# Data preprocessing from Saleem's code"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "id": "d2fa698a",
    "metadata": {},
    "outputs": [],
@@ -600,6 +608,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8be244d9",
+   "metadata": {},
+   "source": [
+    "# Un-processed data info"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 20,
    "id": "31bade5e",
@@ -680,6 +696,14 @@
     "daf.info()\n",
     "daf.describe()\n",
     "print(daf[[\"accel_x\",\"accel_y\",\"accel_z\",\"gyro_x\",\"gyro_y\",\"gyro_z\",\"mag_x\",\"mag_y\",\"mag_z\"]].describe())\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2ed0ff8e",
+   "metadata": {},
+   "source": [
+    "# Editing the preprocessing code"
    ]
   },
   {
@@ -809,7 +833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "id": "ed0bd234",
    "metadata": {},
    "outputs": [
@@ -910,11 +934,189 @@
     "print(\"✅ Cleaned dataset shape:\", df.shape)\n",
     "print(df.head())\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5ff26f9c",
+   "metadata": {},
+   "source": [
+    "# Trying machine learning models"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "88077b20",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test MSE: 171.3448\n",
+      "Test R2: 0.3762\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Full ML pipeline: Predict drone trajectory from IMU sensor readings\n",
+    "\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.metrics import mean_squared_error, r2_score\n",
+    "import joblib\n",
+    "\n",
+    "# 1. Select features (IMU) and targets (trajectory)\n",
+    "X = df[['accel_x', 'accel_y', 'accel_z',\n",
+    "        'gyro_x', 'gyro_y', 'gyro_z',\n",
+    "        'mag_x', 'mag_y', 'mag_z']].values\n",
+    "y = df[['pos_x', 'pos_y', 'pos_z', 'roll', 'pitch', 'yaw']].values\n",
+    "\n",
+    "# 2. Split data\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# 3. Normalize features and targets\n",
+    "scaler_X = StandardScaler()\n",
+    "scaler_y = StandardScaler()\n",
+    "X_train_scaled = scaler_X.fit_transform(X_train)\n",
+    "X_test_scaled = scaler_X.transform(X_test)\n",
+    "y_train_scaled = scaler_y.fit_transform(y_train)\n",
+    "y_test_scaled = scaler_y.transform(y_test)\n",
+    "\n",
+    "# 4. Train model\n",
+    "model = LinearRegression()\n",
+    "model.fit(X_train_scaled, y_train_scaled)\n",
+    "\n",
+    "# 5. Predict\n",
+    "y_pred_scaled = model.predict(X_test_scaled)\n",
+    "y_pred = scaler_y.inverse_transform(y_pred_scaled)\n",
+    "\n",
+    "# 6. Evaluate\n",
+    "mse = mean_squared_error(y_test, y_pred)\n",
+    "r2 = r2_score(y_test, y_pred)\n",
+    "print(f\"Test MSE: {mse:.4f}\")\n",
+    "print(f\"Test R2: {r2:.4f}\")\n",
+    "\n",
+    "# 7. Save model and scalers\n",
+    "# joblib.dump(model, '../src/models/drone_model.pkl')\n",
+    "# joblib.dump(scaler_X, '../src/models/scaler_X.pkl')\n",
+    "# joblib.dump(scaler_y, '../src/models/scaler_y.pkl')\n",
+    "\n",
+    "# 8. Example: Predict on new data\n",
+    "# new_X = ... # shape (n_samples, 9)\n",
+    "# new_X_scaled = scaler_X.transform(new_X)\n",
+    "# new_pred_scaled = model.predict(new_X_scaled)\n",
+    "#"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "062db2e9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test MSE: 36.2273\n",
+      "Test R2: 0.8384\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "\n",
+    "# 4. Train model with RandomForestRegressor\n",
+    "model = RandomForestRegressor(n_estimators=100, random_state=42)\n",
+    "model.fit(X_train_scaled, y_train_scaled)\n",
+    "\n",
+    "# 5. Predict\n",
+    "y_pred_scaled = model.predict(X_test_scaled)\n",
+    "y_pred = scaler_y.inverse_transform(y_pred_scaled)\n",
+    "\n",
+    "# 6. Evaluate\n",
+    "mse = mean_squared_error(y_test, y_pred)\n",
+    "r2 = r2_score(y_test, y_pred)\n",
+    "print(f\"Test MSE: {mse:.4f}\")\n",
+    "print(f\"Test R2: {r2:.4f}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "99df1182",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Actual_pos_x  Pred_pos_x  Actual_pos_y  Pred_pos_y  Actual_pos_z  \\\n",
+      "0     43.720723   21.484365    -38.356998   -4.516538     17.310018   \n",
+      "1      1.704278    3.176003     16.537169    8.948671     18.156017   \n",
+      "2     -6.732948   -9.491845     37.199142   34.883338     30.283738   \n",
+      "3     17.410257   17.345757    -32.078581  -31.931294     22.199729   \n",
+      "4    -43.463302  -15.910665     22.592401   14.544945     10.849393   \n",
+      "5    -44.772731  -34.514602      3.739402    2.155379     19.023502   \n",
+      "6    -43.256198  -24.928076     -8.052528    3.307085     16.196820   \n",
+      "7     40.998501   32.670198     20.397492   17.884633     17.577609   \n",
+      "8     40.829953   20.997723     34.930094   35.606769     18.756656   \n",
+      "9     -2.800302   -7.629027    -10.403931   -9.048936     26.429921   \n",
+      "\n",
+      "   Pred_pos_z  Actual_roll  Pred_roll  Actual_pitch  Pred_pitch  Actual_yaw  \\\n",
+      "0   22.046148    -1.296887  -0.961078      0.576320    0.354550    1.998233   \n",
+      "1   18.587744    -1.582809  -1.754221     -0.497541   -0.611259    1.312689   \n",
+      "2   29.527074     1.434293   1.163823      0.531377    0.539625    0.365932   \n",
+      "3   22.337928     0.046782   0.063685      0.050172    0.035246   -0.003594   \n",
+      "4   14.900182     0.730636   0.720814     -0.815583   -0.639454    1.832240   \n",
+      "5   19.417785    -0.850799  -0.762812      1.003912    1.015515    1.654375   \n",
+      "6   18.853534     1.140319   1.003935      0.678605    0.840294    1.956346   \n",
+      "7   18.142706     0.093959   0.009089     -1.444216   -1.431779   -0.425796   \n",
+      "8   17.451843    -2.410685  -2.353598     -0.475587   -0.581950    1.890891   \n",
+      "9   22.745527     1.957584   1.996685     -0.543370   -0.642074   -1.391532   \n",
+      "\n",
+      "   Pred_yaw  \n",
+      "0  0.744788  \n",
+      "1  1.107826  \n",
+      "2 -0.007654  \n",
+      "3 -0.021936  \n",
+      "4  0.154963  \n",
+      "5  1.536439  \n",
+      "6  1.098123  \n",
+      "7 -0.196225  \n",
+      "8  1.269487  \n",
+      "9  0.048474  \n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Compare first 10 predictions with actual values for all target columns\n",
+    "comparison = pd.DataFrame({\n",
+    "    'Actual_pos_x': y_test[:, 0],\n",
+    "    'Pred_pos_x': y_pred[:, 0],\n",
+    "    'Actual_pos_y': y_test[:, 1],\n",
+    "    'Pred_pos_y': y_pred[:, 1],\n",
+    "    'Actual_pos_z': y_test[:, 2],\n",
+    "    'Pred_pos_z': y_pred[:, 2],\n",
+    "    'Actual_roll': y_test[:, 3],\n",
+    "    'Pred_roll': y_pred[:, 3],\n",
+    "    'Actual_pitch': y_test[:, 4],\n",
+    "    'Pred_pitch': y_pred[:, 4],\n",
+    "    'Actual_yaw': y_test[:, 5],\n",
+    "    'Pred_yaw': y_pred[:, 5],\n",
+    "})\n",
+    "\n",
+    "print(comparison.head(10))"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "libraries",
+   "display_name": "drone-trajectory-prediction",
    "language": "python",
    "name": "python3"
   },
