tring to improve the code

--- a/notebooks/testing.ipynb
+++ b/notebooks/testing.ipynb
@@ -809,7 +809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 13,
    "id": "ed0bd234",
    "metadata": {},
    "outputs": [
@@ -818,6 +818,27 @@
      "output_type": "stream",
      "text": [
       "📂 Using dataset: imu_data.csv\n",
+      "✅ Cleaned dataset shape: (502135, 16)\n",
+      "         time    accel_x   accel_y    accel_z    gyro_x    gyro_y    gyro_z  \\\n",
+      "0    0.000000   0.121071  0.055025   0.140186 -0.011067 -0.010805 -0.008495   \n",
+      "98   0.408333  26.175778  2.483711  13.233593  0.002653  0.820761 -0.003468   \n",
+      "99   0.412500  25.853871  2.395954  13.169779 -0.007524  0.657785  0.007546   \n",
+      "100  0.416667  25.590717  2.447633  12.967597  0.001140  0.494727  0.003560   \n",
+      "101  0.420833  25.224523  2.553393  12.966746 -0.012782  0.337902 -0.002019   \n",
+      "\n",
+      "        mag_x     mag_y     mag_z     pos_x     pos_y      pos_z  roll  \\\n",
+      "0    0.035449 -0.019849 -1.021133  0.000000  0.000000  15.000000   0.0   \n",
+      "98   0.906541  0.087718 -0.041971  3.086126  0.198377  16.560868  -0.0   \n",
+      "99   0.904822  0.068235 -0.032869  3.145891  0.203011  16.591171  -0.0   \n",
+      "100  0.998752  0.043929 -0.109071  3.206101  0.207688  16.621701  -0.0   \n",
+      "101  1.010489 -0.005313 -0.004478  3.266750  0.212407  16.652455  -0.0   \n",
+      "\n",
+      "        pitch  yaw  \n",
+      "0   -0.000000  0.0  \n",
+      "98   1.525909 -0.0  \n",
+      "99   1.528690 -0.0  \n",
+      "100  1.530778 -0.0  \n",
+      "101  1.532173 -0.0  \n",
       "✅ Cleaned dataset shape: (502135, 16)\n",
       "         time    accel_x   accel_y    accel_z    gyro_x    gyro_y    gyro_z  \\\n",
       "0    0.000000   0.121071  0.055025   0.140186 -0.011067 -0.010805 -0.008495   \n",
@@ -910,11 +931,301 @@
     "print(\"✅ Cleaned dataset shape:\", df.shape)\n",
     "print(df.head())\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "14c8c656",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "📂 Using dataset: imu_data.csv\n",
+      "✅ Cleaned dataset shape: (440850, 16)\n",
+      "       time    accel_x   accel_y    accel_z    gyro_x    gyro_y    gyro_z  \\\n",
+      "0  0.000000   0.121071  0.055025   0.140186 -0.011067 -0.010805 -0.008495   \n",
+      "1  0.504167  19.957816  1.920644  10.143239 -0.000567 -2.835298 -0.001505   \n",
+      "2  0.508333  19.790528  1.958678  10.134391  0.010026 -2.971429  0.006720   \n",
+      "3  0.512500  19.461474  1.863660   9.811761 -0.005655 -3.139505  0.013458   \n",
+      "4  0.516667  19.186982  2.083963   9.814028  0.029304 -3.242148 -0.008315   \n",
+      "\n",
+      "      mag_x     mag_y     mag_z     pos_x     pos_y      pos_z  roll  \\\n",
+      "0  0.035449 -0.019849 -1.021133  0.000000  0.000000  15.000000   0.0   \n",
+      "1  0.970741  0.099023 -0.122807  4.564932  0.315078  17.311109  -0.0   \n",
+      "2  1.035171  0.022468 -0.162167  4.633747  0.320597  17.346041  -0.0   \n",
+      "3  0.997608  0.057119 -0.181006  4.702900  0.326149  17.381145  -0.0   \n",
+      "4  0.916779 -0.029111 -0.141337  4.772387  0.331735  17.416420  -0.0   \n",
+      "\n",
+      "      pitch  yaw  \n",
+      "0 -0.000000  0.0  \n",
+      "1  1.417441 -0.0  \n",
+      "2  1.405017 -0.0  \n",
+      "3  1.392025 -0.0  \n",
+      "4  1.378477 -0.0  \n",
+      "✅ Cleaned dataset shape: (440850, 16)\n",
+      "       time    accel_x   accel_y    accel_z    gyro_x    gyro_y    gyro_z  \\\n",
+      "0  0.000000   0.121071  0.055025   0.140186 -0.011067 -0.010805 -0.008495   \n",
+      "1  0.504167  19.957816  1.920644  10.143239 -0.000567 -2.835298 -0.001505   \n",
+      "2  0.508333  19.790528  1.958678  10.134391  0.010026 -2.971429  0.006720   \n",
+      "3  0.512500  19.461474  1.863660   9.811761 -0.005655 -3.139505  0.013458   \n",
+      "4  0.516667  19.186982  2.083963   9.814028  0.029304 -3.242148 -0.008315   \n",
+      "\n",
+      "      mag_x     mag_y     mag_z     pos_x     pos_y      pos_z  roll  \\\n",
+      "0  0.035449 -0.019849 -1.021133  0.000000  0.000000  15.000000   0.0   \n",
+      "1  0.970741  0.099023 -0.122807  4.564932  0.315078  17.311109  -0.0   \n",
+      "2  1.035171  0.022468 -0.162167  4.633747  0.320597  17.346041  -0.0   \n",
+      "3  0.997608  0.057119 -0.181006  4.702900  0.326149  17.381145  -0.0   \n",
+      "4  0.916779 -0.029111 -0.141337  4.772387  0.331735  17.416420  -0.0   \n",
+      "\n",
+      "      pitch  yaw  \n",
+      "0 -0.000000  0.0  \n",
+      "1  1.417441 -0.0  \n",
+      "2  1.405017 -0.0  \n",
+      "3  1.392025 -0.0  \n",
+      "4  1.378477 -0.0  \n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from pathlib import Path\n",
+    "from typing import Optional\n",
+    "import logging\n",
+    "\n",
+    "logging.basicConfig(level=logging.INFO, format='%(levelname)s: %(message)s')\n",
+    "\n",
+    "def clean_drone_data(file_path: Path) -> pd.DataFrame:\n",
+    "    \"\"\"\n",
+    "    Cleans drone sensor data from a CSV file.\n",
+    "\n",
+    "    Args:\n",
+    "        file_path (Path): Path to the CSV file.\n",
+    "\n",
+    "    Returns:\n",
+    "        pd.DataFrame: Cleaned DataFrame.\n",
+    "\n",
+    "    Raises:\n",
+    "        FileNotFoundError: If the file does not exist.\n",
+    "        ValueError: If required columns are missing.\n",
+    "    \"\"\"\n",
+    "    if not file_path.exists():\n",
+    "        raise FileNotFoundError(f\"File not found: {file_path}\")\n",
+    "\n",
+    "    df = pd.read_csv(file_path)\n",
+    "\n",
+    "    # Replace junk values with NaN\n",
+    "    df = df.replace([' ', '', 'NaN', 'null', '----'], np.nan)\n",
+    "\n",
+    "    # Convert all to numeric if possible\n",
+    "    df = df.apply(pd.to_numeric, errors=\"coerce\")\n",
+    "\n",
+    "    # Drop rows with missing values\n",
+    "    df = df.dropna()\n",
+    "\n",
+    "    # Remove duplicates\n",
+    "    df = df.drop_duplicates()\n",
+    "\n",
+    "    # If \"time\" column exists, sort + interpolate gaps\n",
+    "    if \"time\" in df.columns:\n",
+    "        df = df.sort_values(\"time\")\n",
+    "        df = df.set_index(\"time\").interpolate(method=\"linear\").reset_index()\n",
+    "\n",
+    "    # Required sensor columns\n",
+    "    required_cols = [\n",
+    "        \"accel_x\", \"accel_y\", \"accel_z\",\n",
+    "        \"gyro_x\", \"gyro_y\", \"gyro_z\",\n",
+    "        \"mag_x\", \"mag_y\", \"mag_z\"\n",
+    "    ]\n",
+    "    missing_cols = [col for col in required_cols if col not in df.columns]\n",
+    "    if missing_cols:\n",
+    "        raise ValueError(f\"Missing required columns: {missing_cols}\")\n",
+    "\n",
+    "    # Filter unrealistic sensor ranges\n",
+    "    sensor_ranges = {\n",
+    "        \"accel_x\": (-20, 20), \"accel_y\": (-20, 20), \"accel_z\": (-20, 20),\n",
+    "        \"gyro_x\": (-2000, 2000), \"gyro_y\": (-2000, 2000), \"gyro_z\": (-2000, 2000),\n",
+    "        \"mag_x\": (-100, 100), \"mag_y\": (-100, 100), \"mag_z\": (-100, 100)\n",
+    "    }\n",
+    "    for col, (low, high) in sensor_ranges.items():\n",
+    "        df = df[df[col].between(low, high)]\n",
+    "\n",
+    "    df = df.reset_index(drop=True)\n",
+    "    return df\n",
+    "\n",
+    "def get_cleaned_data():\n",
+    "    \"\"\"\n",
+    "    Finds the first CSV inside /data, cleans it, and returns the DataFrame.\n",
+    "    \"\"\"\n",
+    "    repo_root = Path().resolve().parent  # adjust if needed\n",
+    "    data_dir = repo_root / \"data\"\n",
+    "\n",
+    "    csv_files = list(data_dir.glob(\"*.csv\"))\n",
+    "    if not csv_files:\n",
+    "        raise FileNotFoundError(f\"No CSV file found in {data_dir}\")\n",
+    "\n",
+    "    print(f\"📂 Using dataset: {csv_files[0].name}\")\n",
+    "    return clean_drone_data(csv_files[0])\n",
+    "\n",
+    "\n",
+    "\n",
+    "df = get_cleaned_data()\n",
+    "print(\"✅ Cleaned dataset shape:\", df.shape)\n",
+    "print(df.head())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "d712c145",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "📂 Using dataset: imu_data.csv\n",
+      "✅ Cleaned dataset shape: (502135, 16)\n",
+      "       time    accel_x   accel_y    accel_z    gyro_x    gyro_y    gyro_z  \\\n",
+      "0  0.000000   0.121071  0.055025   0.140186 -0.011067 -0.010805 -0.008495   \n",
+      "1  0.408333  26.175778  2.483711  13.233593  0.002653  0.820761 -0.003468   \n",
+      "2  0.412500  25.853871  2.395954  13.169779 -0.007524  0.657785  0.007546   \n",
+      "3  0.416667  25.590717  2.447633  12.967597  0.001140  0.494727  0.003560   \n",
+      "4  0.420833  25.224523  2.553393  12.966746 -0.012782  0.337902 -0.002019   \n",
+      "\n",
+      "      mag_x     mag_y     mag_z     pos_x     pos_y      pos_z  roll  \\\n",
+      "0  0.035449 -0.019849 -1.021133  0.000000  0.000000  15.000000   0.0   \n",
+      "1  0.906541  0.087718 -0.041971  3.086126  0.198377  16.560868  -0.0   \n",
+      "2  0.904822  0.068235 -0.032869  3.145891  0.203011  16.591171  -0.0   \n",
+      "3  0.998752  0.043929 -0.109071  3.206101  0.207688  16.621701  -0.0   \n",
+      "4  1.010489 -0.005313 -0.004478  3.266750  0.212407  16.652455  -0.0   \n",
+      "\n",
+      "      pitch  yaw  \n",
+      "0 -0.000000  0.0  \n",
+      "1  1.525909 -0.0  \n",
+      "2  1.528690 -0.0  \n",
+      "3  1.530778 -0.0  \n",
+      "4  1.532173 -0.0  \n",
+      "✅ Cleaned dataset shape: (502135, 16)\n",
+      "       time    accel_x   accel_y    accel_z    gyro_x    gyro_y    gyro_z  \\\n",
+      "0  0.000000   0.121071  0.055025   0.140186 -0.011067 -0.010805 -0.008495   \n",
+      "1  0.408333  26.175778  2.483711  13.233593  0.002653  0.820761 -0.003468   \n",
+      "2  0.412500  25.853871  2.395954  13.169779 -0.007524  0.657785  0.007546   \n",
+      "3  0.416667  25.590717  2.447633  12.967597  0.001140  0.494727  0.003560   \n",
+      "4  0.420833  25.224523  2.553393  12.966746 -0.012782  0.337902 -0.002019   \n",
+      "\n",
+      "      mag_x     mag_y     mag_z     pos_x     pos_y      pos_z  roll  \\\n",
+      "0  0.035449 -0.019849 -1.021133  0.000000  0.000000  15.000000   0.0   \n",
+      "1  0.906541  0.087718 -0.041971  3.086126  0.198377  16.560868  -0.0   \n",
+      "2  0.904822  0.068235 -0.032869  3.145891  0.203011  16.591171  -0.0   \n",
+      "3  0.998752  0.043929 -0.109071  3.206101  0.207688  16.621701  -0.0   \n",
+      "4  1.010489 -0.005313 -0.004478  3.266750  0.212407  16.652455  -0.0   \n",
+      "\n",
+      "      pitch  yaw  \n",
+      "0 -0.000000  0.0  \n",
+      "1  1.525909 -0.0  \n",
+      "2  1.528690 -0.0  \n",
+      "3  1.530778 -0.0  \n",
+      "4  1.532173 -0.0  \n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from pathlib import Path\n",
+    "\n",
+    "def clean_drone_data(file_path: Path, drop_constant_cols: bool = True) -> pd.DataFrame:\n",
+    "    \"\"\"\n",
+    "    Clean drone dataset:\n",
+    "    1. Replace junk values\n",
+    "    2. Drop NaN + duplicates\n",
+    "    3. Remove columns with >50% NaN\n",
+    "    4. Strip whitespace & lowercase columns\n",
+    "    5. Sort by time & interpolate gaps\n",
+    "    6. Remove outliers (>3σ) for sensor columns\n",
+    "    7. Optionally drop constant columns\n",
+    "    \"\"\"\n",
+    "    # Load dataset\n",
+    "    df = pd.read_csv(file_path)\n",
+    "\n",
+    "    # Clean column names\n",
+    "    df.columns = df.columns.str.strip().str.lower()\n",
+    "\n",
+    "    # Strip whitespace from string/object columns\n",
+    "    for col in df.select_dtypes(include=['object']).columns:\n",
+    "        df[col] = df[col].str.strip()\n",
+    "\n",
+    "    # Replace junk placeholders with NaN\n",
+    "    df = df.replace([' ', '', 'NaN', 'nan', 'null', '----'], np.nan)\n",
+    "\n",
+    "    # Remove columns with >50% missing values\n",
+    "    thresh = len(df) * 0.5\n",
+    "    df = df.dropna(axis=1, thresh=thresh)\n",
+    "\n",
+    "    # Convert all to numeric where possible\n",
+    "    df = df.apply(pd.to_numeric, errors=\"coerce\")\n",
+    "\n",
+    "    # Drop rows with missing values\n",
+    "    df = df.dropna()\n",
+    "\n",
+    "    # Remove duplicates\n",
+    "    df = df.drop_duplicates()\n",
+    "\n",
+    "    # Sort + interpolate if time column exists\n",
+    "    if \"time\" in df.columns:\n",
+    "        df = df.sort_values(\"time\")\n",
+    "        df = df.set_index(\"time\").interpolate(method=\"linear\").reset_index()\n",
+    "\n",
+    "    # Define sensor columns to filter\n",
+    "    sensor_cols = [\n",
+    "        \"accel_x\", \"accel_y\", \"accel_z\",\n",
+    "        \"gyro_x\", \"gyro_y\", \"gyro_z\",\n",
+    "        \"mag_x\", \"mag_y\", \"mag_z\"\n",
+    "    ]\n",
+    "    # Apply 3σ rule for each sensor column\n",
+    "    for col in sensor_cols:\n",
+    "        if col in df.columns:  # avoid KeyError\n",
+    "            mean, std = df[col].mean(), df[col].std()\n",
+    "            df = df[df[col].between(mean - 3*std, mean + 3*std)]\n",
+    "\n",
+    "    # Optionally drop constant columns\n",
+    "    if drop_constant_cols:\n",
+    "        nunique = df.nunique()\n",
+    "        const_cols = nunique[nunique == 1].index\n",
+    "        df = df.drop(columns=const_cols)\n",
+    "\n",
+    "    df = df.reset_index(drop=True)\n",
+    "    return df\n",
+    "\n",
+    "\n",
+    "def get_cleaned_data():\n",
+    "    \"\"\"\n",
+    "    Finds the first CSV inside /data, cleans it, and returns the DataFrame.\n",
+    "    \"\"\"\n",
+    "    repo_root = Path().resolve().parent  # adjust if needed\n",
+    "    data_dir = repo_root / \"data\"\n",
+    "\n",
+    "    csv_files = list(data_dir.glob(\"*.csv\"))\n",
+    "    if not csv_files:\n",
+    "        raise FileNotFoundError(f\"No CSV file found in {data_dir}\")\n",
+    "\n",
+    "    print(f\"📂 Using dataset: {csv_files[0].name}\")\n",
+    "    return clean_drone_data(csv_files[0])\n",
+    "\n",
+    "\n",
+    "\n",
+    "df = get_cleaned_data()\n",
+    "print(\"✅ Cleaned dataset shape:\", df.shape)\n",
+    "print(df.head())\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "libraries",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
