--- a/notebooks/testing.ipynb
+++ b/notebooks/testing.ipynb
@@ -975,7 +975,23 @@
    "id": "9e086386",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "\n",
+    "# 4. Train model with RandomForestRegressor\n",
+    "model = RandomForestRegressor(n_estimators=100, random_state=42)\n",
+    "model.fit(X_train_scaled, y_train_scaled)\n",
+    "\n",
+    "# 5. Predict\n",
+    "y_pred_scaled = model.predict(X_test_scaled)\n",
+    "y_pred = scaler_y.inverse_transform(y_pred_scaled)\n",
+    "\n",
+    "# 6. Evaluate\n",
+    "mse = mean_squared_error(y_test, y_pred)\n",
+    "r2 = r2_score(y_test, y_pred)\n",
+    "print(f\"Test MSE: {mse:.4f}\")\n",
+    "print(f\"Test R2: {r2:.4f}\")\n"
+   ]
   }
  ],
  "metadata": {
