--- a/notebooks/testing.ipynb
+++ b/notebooks/testing.ipynb
@@ -1469,8 +1469,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c8b3973c",
+   "metadata": {},
+   "source": [
+    "# Cleans drone dataset with hyperparameterized filtering"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "id": "4eff5098",
    "metadata": {},
    "outputs": [
@@ -1657,11 +1665,158 @@
     "print(\"✅ Cleaned dataset shape:\", df.shape)\n",
     "print(df.head())\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f840a271",
+   "metadata": {},
+   "source": [
+    "# ML with the hyperparameterized filtering data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "edc0fc1d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Cleaned dataset shape: (538476, 16)\n",
+      "Test MSE: 42.8765\n",
+      "Test R2: 0.8200\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Full ML pipeline: Predict drone trajectory from IMU sensor readings\n",
+    "\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "from sklearn.metrics import mean_squared_error, r2_score\n",
+    "import numpy as np\n",
+    "import joblib\n",
+    "\n",
+    "def create_sliding_window(X, y, window_size=5):\n",
+    "    Xs, ys = [], []\n",
+    "    for i in range(len(X) - window_size):\n",
+    "        Xs.append(X[i:i+window_size].flatten())\n",
+    "        ys.append(y[i+window_size])\n",
+    "    return np.array(Xs), np.array(ys)\n",
+    "\n",
+    "print(\"✅ Cleaned dataset shape:\", df.shape)\n",
+    "# 1. Select features (IMU) and targets (trajectory)\n",
+    "X = df[['accel_x', 'accel_y', 'accel_z',\n",
+    "        'gyro_x', 'gyro_y', 'gyro_z',\n",
+    "        'mag_x', 'mag_y', 'mag_z']].values\n",
+    "y = df[['pos_x', 'pos_y', 'pos_z', 'roll', 'pitch', 'yaw']].values\n",
+    "\n",
+    "window_size = 5\n",
+    "X_windowed, y_windowed = create_sliding_window(X, y, window_size=window_size)\n",
+    "# 2. Split data\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X_windowed, y_windowed, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# 3. Normalize features and targets\n",
+    "scaler_X = StandardScaler()\n",
+    "scaler_y = StandardScaler()\n",
+    "X_train_scaled = scaler_X.fit_transform(X_train)\n",
+    "X_test_scaled = scaler_X.transform(X_test)\n",
+    "y_train_scaled = scaler_y.fit_transform(y_train)\n",
+    "y_test_scaled = scaler_y.transform(y_test)\n",
+    "\n",
+    "\n",
+    "# 4. Train model with RandomForestRegressor\n",
+    "model = RandomForestRegressor(n_estimators=100, random_state=42)\n",
+    "model.fit(X_train_scaled, y_train_scaled)\n",
+    "\n",
+    "# 5. Predict\n",
+    "y_pred_scaled = model.predict(X_test_scaled)\n",
+    "y_pred = scaler_y.inverse_transform(y_pred_scaled)\n",
+    "\n",
+    "# 6. Evaluate\n",
+    "mse = mean_squared_error(y_test, y_pred)\n",
+    "r2 = r2_score(y_test, y_pred)\n",
+    "print(f\"Test MSE: {mse:.4f}\")\n",
+    "print(f\"Test R2: {r2:.4f}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "31b80a42",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Actual_pos_x  Pred_pos_x  Actual_pos_y  Pred_pos_y  Actual_pos_z  \\\n",
+      "0      3.820256    1.621034    -28.068741  -30.921411     19.377194   \n",
+      "1     31.890015   31.864111     18.503125   18.480747     24.877465   \n",
+      "2     40.797948   30.208379      8.001471    8.691316     18.466987   \n",
+      "3      3.366688   16.642072    -40.759438   -5.154853     20.692703   \n",
+      "4    -13.910702   -4.966476     -6.699410   -1.856487     19.182085   \n",
+      "5     32.356445   23.394828     41.236575   23.162899     20.098930   \n",
+      "6    -21.514315   -5.299436     20.274460    6.590530     16.911458   \n",
+      "7    -16.467249  -13.282606    -16.883213  -15.193180     15.977877   \n",
+      "8     22.376919   13.235123     -4.347863   -4.472818     27.832856   \n",
+      "9     42.983032   37.299663    -45.487294  -40.677002     23.825355   \n",
+      "\n",
+      "   Pred_pos_z  Actual_roll  Pred_roll  Actual_pitch  Pred_pitch  Actual_yaw  \\\n",
+      "0   20.234212    -0.780024  -0.661722     -0.356392   -0.606473    1.398885   \n",
+      "1   24.867895     0.541373   0.554911     -0.011429   -0.010498    0.033748   \n",
+      "2   19.705360     0.917545   0.842237     -0.086554   -0.088961    3.091867   \n",
+      "3   19.206882    -1.424416  -0.733529     -1.423973   -1.347504    1.172517   \n",
+      "4   18.068754     1.499192   1.240227     -1.022836   -1.082338   -0.335772   \n",
+      "5   19.909985     2.908773   2.417075     -0.038603   -0.051153    1.583689   \n",
+      "6   17.810881    -2.519295  -2.304147      0.787391    0.830972   -2.401422   \n",
+      "7   15.929071    -0.125763  -0.133200     -0.134633   -0.122933   -0.082904   \n",
+      "8   25.816762    -1.790639  -1.611664      0.762677    0.513936    2.556242   \n",
+      "9   23.814650     0.037530   0.048959      0.032870    0.026503    0.038783   \n",
+      "\n",
+      "   Pred_yaw  \n",
+      "0  1.103885  \n",
+      "1  0.030056  \n",
+      "2  0.188157  \n",
+      "3  0.864371  \n",
+      "4 -0.402752  \n",
+      "5  1.391035  \n",
+      "6 -0.896269  \n",
+      "7 -0.105368  \n",
+      "8  1.512898  \n",
+      "9  0.066764  \n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Compare first 10 predictions with actual values for all target columns\n",
+    "comparison = pd.DataFrame({\n",
+    "    'Actual_pos_x': y_test[:, 0],\n",
+    "    'Pred_pos_x': y_pred[:, 0],\n",
+    "    'Actual_pos_y': y_test[:, 1],\n",
+    "    'Pred_pos_y': y_pred[:, 1],\n",
+    "    'Actual_pos_z': y_test[:, 2],\n",
+    "    'Pred_pos_z': y_pred[:, 2],\n",
+    "    'Actual_roll': y_test[:, 3],\n",
+    "    'Pred_roll': y_pred[:, 3],\n",
+    "    'Actual_pitch': y_test[:, 4],\n",
+    "    'Pred_pitch': y_pred[:, 4],\n",
+    "    'Actual_yaw': y_test[:, 5],\n",
+    "    'Pred_yaw': y_pred[:, 5],\n",
+    "})\n",
+    "\n",
+    "print(comparison.head(10))"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "drone-trajectory-prediction",
    "language": "python",
    "name": "python3"
   },
