--- a/notebooks/testing.ipynb
+++ b/notebooks/testing.ipynb
@@ -1745,6 +1745,134 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "f8f290ca",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "117cb832",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name '__file__' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[6]\u001b[39m\u001b[32m, line 5\u001b[39m\n\u001b[32m      2\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpathlib\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m Path\n\u001b[32m      4\u001b[39m \u001b[38;5;66;03m# === Make repo root importable no matter where we run this ===\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m5\u001b[39m repo_root = Path(\u001b[34;43m__file__\u001b[39;49m).resolve().parents[\u001b[32m2\u001b[39m]\n\u001b[32m      6\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mstr\u001b[39m(repo_root) \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m sys.path:\n\u001b[32m      7\u001b[39m     sys.path.append(\u001b[38;5;28mstr\u001b[39m(repo_root))\n",
+      "\u001b[31mNameError\u001b[39m: name '__file__' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "from pathlib import Path\n",
+    "\n",
+    "# === Make repo root importable no matter where we run this ===\n",
+    "repo_root = Path(__file__).resolve().parents[2]\n",
+    "if str(repo_root) not in sys.path:\n",
+    "    sys.path.append(str(repo_root))\n",
+    "\n",
+    "# =============================================================\n",
+    "\n",
+    "import numpy as np\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.metrics import r2_score, mean_squared_error, mean_absolute_error\n",
+    "from sklearn.neural_network import MLPRegressor\n",
+    "import joblib\n",
+    "\n",
+    "# Import cleaning function (works now because repo root is in sys.path)\n",
+    "from src.data.clean_data import get_cleaned_data\n",
+    "\n",
+    "# ======================\n",
+    "# 1. Load cleaned dataset\n",
+    "# ======================\n",
+    "df = get_cleaned_data()   # <--- CLEANED DATA HERE\n",
+    "\n",
+    "# ======================\n",
+    "# 2. Select features and targets\n",
+    "# ======================\n",
+    "X = df[['accel_x', 'accel_y', 'accel_z',\n",
+    "        'gyro_x', 'gyro_y', 'gyro_z',\n",
+    "        'mag_x', 'mag_y', 'mag_z']].values\n",
+    "\n",
+    "y = df[['pos_x', 'pos_y', 'pos_z',\n",
+    "        'roll', 'pitch', 'yaw']].values\n",
+    "\n",
+    "# ======================\n",
+    "# 3. Normalize\n",
+    "# ======================\n",
+    "scaler_X = StandardScaler()\n",
+    "scaler_y = StandardScaler()\n",
+    "\n",
+    "X = scaler_X.fit_transform(X)\n",
+    "y = scaler_y.fit_transform(y)\n",
+    "\n",
+    "# Save scalers in src/models\n",
+    "model_dir = Path(__file__).parent\n",
+    "joblib.dump(scaler_X, model_dir / \"scaler_X_1.pkl\")\n",
+    "joblib.dump(scaler_y, model_dir / \"scaler_y.pkl\")\n",
+    "\n",
+    "# ======================\n",
+    "# 4. Sliding window creation\n",
+    "# ======================\n",
+    "def create_windows(X, y, window_size=50):\n",
+    "    Xs, ys = [], []\n",
+    "    for i in range(len(X) - window_size):\n",
+    "        Xs.append(X[i:(i+window_size)].flatten())  # flatten for sklearn\n",
+    "        ys.append(y[i+window_size])\n",
+    "    return np.array(Xs), np.array(ys)\n",
+    "\n",
+    "window_size = 50\n",
+    "X_seq, y_seq = create_windows(X, y, window_size)\n",
+    "\n",
+    "# ======================\n",
+    "# 5. Train/test split\n",
+    "# ======================\n",
+    "split_idx = int(len(X_seq) * 0.8)\n",
+    "X_train, X_test = X_seq[:split_idx], X_seq[split_idx:]\n",
+    "y_train, y_test = y_seq[:split_idx], y_seq[split_idx:]\n",
+    "\n",
+    "# ======================\n",
+    "# 6. Define and train model\n",
+    "# ======================\n",
+    "model = MLPRegressor(hidden_layer_sizes=(128, 64),\n",
+    "                     activation='relu',\n",
+    "                     solver='adam',\n",
+    "                     max_iter=50,\n",
+    "                     batch_size=64,\n",
+    "                     random_state=42,\n",
+    "                     verbose=True)\n",
+    "\n",
+    "model.fit(X_train, y_train)\n",
+    "\n",
+    "# ======================\n",
+    "# 7. Evaluate\n",
+    "# ======================\n",
+    "y_pred = model.predict(X_test)\n",
+    "\n",
+    "# Undo normalization\n",
+    "y_true = scaler_y.inverse_transform(y_test)\n",
+    "y_pred = scaler_y.inverse_transform(y_pred)\n",
+    "\n",
+    "print(\"R² per output:\", [r2_score(y_true[:, i], y_pred[:, i]) for i in range(y_true.shape[1])])\n",
+    "print(\"MAE per output:\", [mean_absolute_error(y_true[:, i], y_pred[:, i]) for i in range(y_true.shape[1])])\n",
+    "print(\"RMSE per output:\", [np.sqrt(mean_squared_error(y_true[:, i], y_pred[:, i])) for i in range(y_true.shape[1])])\n",
+    "\n",
+    "# ======================\n",
+    "# 8. Save trained model\n",
+    "# ======================\n",
+    "joblib.dump(model, model_dir / \"drone_model_1.pkl\")\n",
+    "print(\"✅ Model and scalers saved successfully in src/models/\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "id": "31b80a42",
    "metadata": {},
@@ -1812,11 +1940,110 @@
     "\n",
     "print(comparison.head(10))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "a0fdcdf0",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name '_file_' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[4]\u001b[39m\u001b[32m, line 13\u001b[39m\n\u001b[32m     10\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpathlib\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m Path\n\u001b[32m     12\u001b[39m \u001b[38;5;66;03m# إضافة مجلد المشروع إلى المسار\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m13\u001b[39m repo_root = Path(\u001b[43m_file_\u001b[49m).resolve().parents[\u001b[32m2\u001b[39m]\n\u001b[32m     14\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mstr\u001b[39m(repo_root) \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m sys.path:\n\u001b[32m     15\u001b[39m     sys.path.append(\u001b[38;5;28mstr\u001b[39m(repo_root))\n",
+      "\u001b[31mNameError\u001b[39m: name '_file_' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# Full ML pipeline: Predict drone trajectory from IMU sensor readings\n",
+    "\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "from sklearn.metrics import mean_squared_error, r2_score\n",
+    "import numpy as np\n",
+    "import joblib\n",
+    "import sys\n",
+    "from pathlib import Path\n",
+    "\n",
+    "# إضافة مجلد المشروع إلى المسار\n",
+    "repo_root = Path(_file_).resolve().parents[2]\n",
+    "if str(repo_root) not in sys.path:\n",
+    "    sys.path.append(str(repo_root))\n",
+    "\n",
+    "# استدعاء دالة تنظيف البيانات من الكود الثاني\n",
+    "from src.data.clean_data import get_cleaned_data\n",
+    "\n",
+    "\n",
+    "def create_sliding_window(X, y, window_size=5):\n",
+    "    Xs, ys = [], []\n",
+    "    for i in range(len(X) - window_size):\n",
+    "        Xs.append(X[i:i+window_size].flatten())\n",
+    "        ys.append(y[i+window_size])\n",
+    "    return np.array(Xs), np.array(ys)\n",
+    "\n",
+    "\n",
+    "if _name_ == \"_main_\":\n",
+    "    # 0. جلب البيانات النظيفة\n",
+    "    df = get_cleaned_data(use_grid_search=True)\n",
+    "    print(\"✅ Cleaned dataset shape:\", df.shape)\n",
+    "\n",
+    "    # 1. Select features (IMU) and targets (trajectory)\n",
+    "    X = df[['accel_x', 'accel_y', 'accel_z',\n",
+    "            'gyro_x', 'gyro_y', 'gyro_z',\n",
+    "            'mag_x', 'mag_y', 'mag_z']].values\n",
+    "    y = df[['pos_x', 'pos_y', 'pos_z', 'roll', 'pitch', 'yaw']].values\n",
+    "\n",
+    "    window_size = 5\n",
+    "    X_windowed, y_windowed = create_sliding_window(X, y, window_size=window_size)\n",
+    "\n",
+    "    # 2. Split data\n",
+    "    X_train, X_test, y_train, y_test = train_test_split(\n",
+    "        X_windowed, y_windowed, test_size=0.2, random_state=42\n",
+    "    )\n",
+    "\n",
+    "    # 3. Normalize features and targets\n",
+    "    scaler_X = StandardScaler()\n",
+    "    scaler_y = StandardScaler()\n",
+    "    X_train_scaled = scaler_X.fit_transform(X_train)\n",
+    "    X_test_scaled = scaler_X.transform(X_test)\n",
+    "    y_train_scaled = scaler_y.fit_transform(y_train)\n",
+    "    y_test_scaled = scaler_y.transform(y_test)\n",
+    "\n",
+    "    # 4. Train model with RandomForestRegressor\n",
+    "    model = RandomForestRegressor(n_estimators=100, random_state=42)\n",
+    "    model.fit(X_train_scaled, y_train_scaled)\n",
+    "\n",
+    "    # 5. Predict\n",
+    "    y_pred_scaled = model.predict(X_test_scaled)\n",
+    "    y_pred = scaler_y.inverse_transform(y_pred_scaled)\n",
+    "\n",
+    "    # 6. Evaluate\n",
+    "    mse = mean_squared_error(y_test, y_pred)\n",
+    "    r2 = r2_score(y_test, y_pred)\n",
+    "    print(f\"Test MSE: {mse:.4f}\")\n",
+    "    print(f\"Test R2: {r2:.4f}\")\n",
+    "\n",
+    "    # 7. Save model + scalers\n",
+    "    model_dir = repo_root / \"src\" / \"models\"\n",
+    "    model_dir.mkdir(parents=True, exist_ok=True)\n",
+    "\n",
+    "    joblib.dump(scaler_X, model_dir / \"scaler_X.pkl\")\n",
+    "    joblib.dump(scaler_y, model_dir / \"scaler_y.pkl\")\n",
+    "    joblib.dump(model, model_dir / \"drone_model.pkl\")\n",
+    "\n",
+    "    print(\"✅ Model and scalers saved successfully in src/models/\")"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "drone-trajectory-prediction",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1830,7 +2057,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
